# Text2SQL

./: .env.sample  .gitignore  .gitpod.yml  00-postgres.sql  contribution.md  docker-compose.gitpod.yml  docker-compose.yml  openAPISpec.yaml  readme.md  requirements.txt  setup.sh
.github/workflows/: ci.yml
app/: dockerfile  package-lock.json  package.json  turbo.json
app/my-turborepo/: package-lock.json  package.json
chatbot/: bot.py  requirements.txt
chatbot/sql/: education.sql
chatbot/style/: styles.md
frontend/: index.html
frontend/src/: app.jsx
literature_review/: readme.md
literature_review/dataset/: readme.md
literature_review/model/: readme.md
literature_review/papers/: SQL_PALM.md  readme.md
playground/: index.html  package-lock.json  package.json  style.css
playground/src/: DataTable.jsx  app.jsx  index.jsx  style.css
prompt/: related_tables.md  related_tables.txt
review/dataset/: readme.md
src/: Dockerfile  related_tables.py
src/server/: accounts.sample.py  app.py  db_helper.py  db_utils.py  prompts.py  response_codes.py  utils.py
src/server/sql_graph/: LICENSE  README.md  _tests  mypy.ini  pyproject.toml  requirements.txt
src/server/sql_graph/docs/: readme.md
src/server/sql_graph/src/: graph.py  graph_modified.py
src/server/sql_graph/tests/: test_sql_graph.py  test_sql_graph_modified.py
src/server/sql_graph/tests/schemas/: ed.sql
tests/: eSamwad.sql  model_tests.py  readme.md  related_tables.py  test_app.py  test_list.json
tests/evaluation/: database.rar  readme.md  sample_prediction.txt
(+47 files in other folders)
